test/users/weili/raiseType2-blc.good
raiseType2-blc.chpl:2: error: Cannot compare types with values
